chore: enhance tablet device adaptation

--- a/app/src/main/res/layout/fragment_favorite_details.xml
+++ b/app/src/main/res/layout/fragment_favorite_details.xml
@@ -49,11 +49,11 @@
                     android:layout_height="wrap_content"
                     android:text="@{announcement.title}"
                     style="@style/DetailsItemTitle"
-                    android:layout_marginStart="@dimen/announcement_details_padding"
-                    android:layout_marginLeft="@dimen/announcement_details_padding"
                     android:layout_marginTop="@dimen/spacer4"
-                    android:layout_marginEnd="@dimen/announcement_details_padding"
-                    android:layout_marginRight="@dimen/announcement_details_padding"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     android:layout_marginBottom="@dimen/spacer4"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -109,6 +109,10 @@
                     android:background="@drawable/bg_top_bottom_line"
                     android:layout_marginTop="@dimen/spacer4"
                     android:gravity="center"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     app:layout_constraintLeft_toLeftOf="@id/creationDate"
                     app:layout_constraintStart_toStartOf="@id/creationDate"
                     app:layout_constraintTop_toBottomOf="@id/creationDate">
@@ -186,6 +190,10 @@
                     android:layout_height="@dimen/spacer1"
                     android:background="@drawable/bg_line"
                     android:layout_marginTop="@dimen/spacer4"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -214,6 +222,10 @@
                     android:layout_height="@dimen/spacer1"
                     android:background="@drawable/bg_line"
                     android:layout_marginTop="@dimen/spacer4"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -226,29 +238,34 @@
                     android:layout_height="wrap_content"
                     android:text="@string/announcement_details_location_label"
                     style="@style/AnnouncementInfoLine"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     app:layout_constraintTop_toBottomOf="@+id/secondDivider"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"/>
+                    app:layout_constraintStart_toStartOf="@id/title"
+                    app:layout_constraintLeft_toLeftOf="@id/title"
+                    app:layout_constraintEnd_toEndOf="@id/title"
+                    app:layout_constraintRight_toRightOf="@id/title"/>
 
                 <LinearLayout
                     android:id="@+id/locationContent"
                     android:orientation="vertical"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/spacer4"
+                    android:paddingTop="@dimen/spacer4"
+                    android:paddingBottom="@dimen/spacer4"
                     app:layout_constraintTop_toBottomOf="@+id/locationLabel"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintRight_toRightOf="parent">
+                    app:layout_constraintStart_toStartOf="@id/title"
+                    app:layout_constraintLeft_toLeftOf="@id/title"
+                    app:layout_constraintEnd_toEndOf="@id/title"
+                    app:layout_constraintRight_toRightOf="@id/title">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{announcement.city.name}"
-                        style="@style/body1.text"
+                        style="@style/DetailsItemDescription"
                         android:drawableStart="@drawable/ic_near_me_24dp"
                         android:drawableLeft="@drawable/ic_near_me_24dp"/>
 
@@ -256,7 +273,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@{announcement.localization}"
-                        style="@style/body1.text"
+                        style="@style/DetailsItemDescription"
                         android:drawableStart="@drawable/ic_place_24dp"
                         android:drawableLeft="@drawable/ic_place_24dp"
                         android:layout_marginTop="@dimen/spacer2"/>
@@ -268,6 +285,10 @@
                     android:layout_height="@dimen/spacer1"
                     android:background="@drawable/bg_line"
                     android:layout_marginTop="@dimen/spacer1"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -280,11 +301,15 @@
                     android:layout_height="wrap_content"
                     android:text="@string/announcement_details_announcer_label"
                     style="@style/AnnouncementInfoLine"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
                     app:layout_constraintTop_toBottomOf="@+id/thirdDivider"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"/>
+                    app:layout_constraintStart_toStartOf="@id/title"
+                    app:layout_constraintLeft_toLeftOf="@id/title"
+                    app:layout_constraintEnd_toEndOf="@id/title"
+                    app:layout_constraintRight_toRightOf="@id/title"/>
 
                 <LinearLayout
                     android:id="@+id/announcerInfo"
@@ -293,10 +318,14 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/spacer4"
                     android:gravity="center"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
+                    android:layout_marginStart="@dimen/announcement_details_margin"
+                    android:layout_marginLeft="@dimen/announcement_details_margin"
+                    android:layout_marginEnd="@dimen/announcement_details_margin"
+                    android:layout_marginRight="@dimen/announcement_details_margin"
+                    app:layout_constraintStart_toStartOf="@id/title"
+                    app:layout_constraintLeft_toLeftOf="@id/title"
+                    app:layout_constraintEnd_toEndOf="@id/title"
+                    app:layout_constraintRight_toRightOf="@id/title"
                     app:layout_constraintTop_toBottomOf="@id/announcerLabel">
 
                     <de.hdodenhof.circleimageview.CircleImageView
