--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,7 +23,7 @@
     <!--announcement-->
     <dimen name="announcement_details_image_width">0dp</dimen>
     <dimen name="announcement_details_image_height">350dp</dimen>
-    <dimen name="announcement_details_padding">@dimen/spacer4</dimen>
+    <dimen name="announcement_details_margin">@dimen/spacer4</dimen>
 
     <!--spacers-->
     <dimen name="spacer1">4dp</dimen>
@@ -33,6 +33,7 @@
     <dimen name="spacer8">32dp</dimen>
     <dimen name="spacer12">48dp</dimen>
     <dimen name="spacer16">64dp</dimen>
+    <dimen name="spacer32">128dp</dimen>
 
     <!--font sizes-->
     <dimen name="material_text_button">14sp</dimen>
