--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,6 +14,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/imageHolder"
+            android:transitionName="layoutTransition"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
