--- a/app/src/main/res/layout/fragment_account_details.xml
+++ b/app/src/main/res/layout/fragment_account_details.xml
@@ -18,6 +18,7 @@
 
             <LinearLayout
                 android:id="@+id/imageHolder"
+                android:transitionName="layoutTransition"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
