--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,6 +24,18 @@
                 android:padding="@dimen/spacer4"
                 android:paddingTop="@dimen/spacer16">
 
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_title"
+                    style="@style/display1.main.bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintStart_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
                 <com.wolasoft.waul.widgets.CustomEditText
                     android:id="@+id/emailEdit"
                     android:layout_width="match_parent"
@@ -33,11 +45,11 @@
                     android:layout_marginTop="@dimen/spacer6"
                     android:hint="@string/login_edittext_email_hint"
                     android:inputType="textEmailAddress"
+                    app:layout_constraintTop_toBottomOf="@+id/title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintStart_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toEndOf="parent" />
 
                 <com.wolasoft.waul.widgets.CustomEditText
                     android:id="@+id/passwordEdit"
