--- a/app/src/main/res/layout/fragment_feed_back.xml
+++ b/app/src/main/res/layout/fragment_feed_back.xml
@@ -39,7 +39,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 tools:text="Title"
-                style="@style/CommonMessageSuccess"
+                android:gravity="center"
                 android:layout_marginTop="@dimen/spacer4"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
