--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,8 @@
     <style name="headline.main"><item name="android:textColor">@color/colorPrimary</item></style>
     <style name="headline.main.medium"><item name="android:fontFamily">sans-serif-medium</item></style>
     <style name="headline.main.bold"><item name="android:textStyle">bold</item></style>
+    <style name="headline.red"><item name="android:textColor">@color/colorRed</item></style>
+    <style name="headline.red.bold"><item name="android:textStyle">bold</item></style>
     <style name="headline.text"><item name="android:textColor">@color/colorBlack</item></style>
     <style name="headline.text.medium"><item name="android:fontFamily">sans-serif-medium</item></style>
     <style name="headline.text.bold"><item name="android:textStyle">bold</item></style>
@@ -127,11 +129,6 @@
 
     <style name="DetailsItemDescription" parent="body1.text">
         <item name="android:lineSpacingExtra">5dp</item>
-    </style>
-
-    <style name="CommonMessageSuccess" parent="headline.main.bold">
-        <item name="android:lineSpacingExtra">5dp</item>
-        <item name="android:gravity">center</item>
     </style>
 
     <style name="ButtonPrimary" parent="Widget.AppCompat.Button.Borderless">
