--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -39,31 +39,18 @@
             <TextView
                 android:id="@+id/nameTV"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                style="@style/title.white.medium"
+                android:layout_height="0dp"
+                style="@style/body1.white.medium"
+                android:gravity="center_vertical"
                 android:layout_marginTop="@dimen/spacer1"
                 android:layout_marginStart="@dimen/spacer4"
                 android:layout_marginLeft="@dimen/spacer4"
                 android:text="@{account.person.fullName()}"
                 tools:text="Komi Wolanyo KOUDO"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/profile"
                 app:layout_constraintLeft_toRightOf="@id/profile"
-                app:layout_constraintEnd_toStartOf="@+id/moreDetailsIMG"
-                app:layout_constraintRight_toLeftOf="@+id/moreDetailsIMG"/>
-
-            <TextView
-                android:id="@+id/birthInfo"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                style="@style/body2.white"
-                android:layout_marginTop="@dimen/spacer1"
-                android:visibility="gone"
-                tools:visibility="visible"
-                tools:text="Né le 10/10/1900 à Strasbourg"
-                app:layout_constraintTop_toBottomOf="@id/nameTV"
-                app:layout_constraintStart_toStartOf="@id/nameTV"
-                app:layout_constraintLeft_toLeftOf="@id/nameTV"
                 app:layout_constraintEnd_toStartOf="@+id/moreDetailsIMG"
                 app:layout_constraintRight_toLeftOf="@+id/moreDetailsIMG"/>
 
@@ -124,9 +111,9 @@
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="@style/ProgressBar"
+                android:layout_gravity="center"
                 android:visibility="visible"
-                tools:visibility="visible"
-                android:layout_gravity="center"/>
+                tools:visibility="visible" />
         </FrameLayout>
 
     </LinearLayout>
