--- a/app/src/main/res/values/configs.xml
+++ b/app/src/main/res/values/configs.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string translatable="false" name="admob_id">ca-app-pub-3940256099942544~3347511713</string>
+    <string translatable="false" name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
 </resources>
